k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moetikeenjasaan
  labels:
    app: moetikeenjasaan
spec:
  selector:
    app: moetikeenjasaan
  ports:
    - name: http
      port: 80
      targetPort: 80
